--- a/hfTree/hfTree.cbp
+++ b/hfTree/hfTree.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="tree" />
+		<Option title="hfTree" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/tree" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/hfTree" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/tree" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/hfTree" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -32,14 +32,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="../queue/Queue.h" />
-		<Unit filename="../queue/seqQueue.cpp" />
-		<Unit filename="../queue/seqQueue.h" />
-		<Unit filename="../stack/Stack.h" />
-		<Unit filename="../stack/seqStack.cpp" />
-		<Unit filename="../stack/seqStack.h" />
-		<Unit filename="binaryTree.cpp" />
-		<Unit filename="binaryTree.h" />
+		<Unit filename="hfTree.cpp" />
+		<Unit filename="hfTree.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
