--- a/BernoulliTree/BernoulliTree.cbp
+++ b/BernoulliTree/BernoulliTree.cbp
@@ -32,6 +32,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="BernoulliTree.cpp" />
+		<Unit filename="BernoulliTree.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
